@@ -1,3 +1,7 @@
+2002-09-16  Manuel M T Chakravarty  <chak@AttitudeAdjuster>
+
+	* Makefile (libctk.o): generating library for GHCi
+
 2002-09-06  Manuel M T Chakravarty  <chak@AttitudeAdjuster>
 
 	* Makefile (OBJS): excluded state/DynArrays.o from the target
